--- a/files/system/make.conf
+++ b/files/system/make.conf
@@ -28,7 +28,7 @@ WITH_OPTIMIZED_CFLAGS=YES
 WITHOUT_X11=YES
 WITHOUT_CUPS=yes
 WITHOUT_FONTCONFIG=yes
-NOPORTDOCS=yes
+WITHOUT=DOCS
 WITHOUT_MODULES = sound ntfs linux
 OPTIONS_UNSET= CUPS NLS DOCS
 
