--- a/files/system/pf.conf
+++ b/files/system/pf.conf
@@ -1,3 +1,21 @@
-ext_if="wlan0" # your interface ! 
-table <fail2ban> persist
-block quick proto tcp from <fail2ban> to $ext_if port ssh
+# Allowed outbound connections
+tcp_pass = "{ 53 80 22 443 123 }" # dns, http, ssh, https, ntp 
+udp_pass = "{ 53 }" # dns
+
+# By defaulto block everything
+block all
+
+# Permitted outbound connections
+pass out on wlan0 proto tcp to any port $tcp_pass keep state
+pass out on wlan0 proto udp to any port $udp_pass keep state
+
+# Allow any connections locally
+table <local> { 192.168.1.0/24 }
+pass in quick from <local> to any keep state
+
+# TODO
+# Port forwarding
+# Incoming connections from outside to port 22 (ssh) get passed to
+# security jail. Port 2222 goes to dahmer?
+# Don't allow connections from jail to anything else in the network
+# fail2ban in the secure jail too
