--- a/network/network.template
+++ b/network/network.template
@@ -1,6 +1,7 @@
-wlans_ath0="wlan0"
-ifconfig_wlan0="WPA dhcp"
-
-{% for (host,ip) in pillar.get(grains['fqdn'], {}).items() %}
-ifconfig_wlan0_alias{{ loop.index - 1 }}="inet {{ ip }} netmask 255.255.255.0"
-{% endfor %}
+{% set i=0 -%}
+{% for host,hostdetail in pillar.get('hosts', {}).items() -%}
+{% if 'jailhost' in hostdetail.keys() and hostdetail['jailhost'] == grains['fqdn'] -%}
+ifconfig_wlan0_alias{{ i }}="inet {{ hostdetail['ip'] }} netmask 255.255.255.0"
+{% set i=i+1 -%}
+{% endif -%}
+{% endfor -%}
