--- a/files/system/sysctl.conf
+++ b/files/system/sysctl.conf
@@ -1,3 +1,14 @@
 security.jail.allow_raw_sockets=1
+security.jail.mount_allowed=1
+security.jail.mount_devfs_allowed=1
+security.jail.mount_fdescfs_allowed=1
+security.jail.mount_nullfs_allowed=1
+security.jail.mount_procfs_allowed=1
+security.jail.mount_tmpfs_allowed=1
+security.jail.param.allow.mount.devfs=1
+security.jail.param.allow.mount.fdescfs=1
+security.jail.param.allow.mount.nullfs=1
+security.jail.param.allow.mount.procfs=1
+security.jail.param.allow.mount.tmpfs=1
+security.jail.param.allow.mount=1
 security.jail.sysvipc_allowed=1
-
