--- a/pkg_server/buildlist.template
+++ b/pkg_server/buildlist.template
@@ -1,27 +1,57 @@
-databases/postgresql95-server
 devel/git
 devel/libffi
-devel/py-babel
 devel/py-Jinja2
+devel/py-babel
 devel/py-yaml
+devel/ruby-gems
+devel/rubygem-atomic
+devel/rubygem-cool.io
+devel/rubygem-iobuffer
+devel/rubygem-json
+devel/rubygem-msgpack
+devel/rubygem-sigdump
+devel/rubygem-thread_safe1
+devel/rubygem-tzinfo
+devel/rubygem-yajl-ruby
+devel/strace
 dns/dnsmasq
 editors/vim
 lang/perl5.20
+lang/php56
 lang/python
 mail/ssmtp
 math/gmp
+math/mpc
+net-mgmt/nagios4
+net-mgmt/nrpe
+net/libzmq4
 net/openpgm
+net/py-pyzmq
 net/rsync
+net/rubygem-http_parser.rb
 net/svnup
 ports-mgmt/synth
 security/ca_root_nss
 security/libsodium
+security/nmap
 security/openssl
 security/sshguard
 security/sudo
 shells/zsh
 sysutils/ezjail
-sysutils/screen
 sysutils/py-salt
-net/libzmq4
-net/py-pyzmq
+sysutils/rubygem-fluentd
+sysutils/screen
+sysutils/syslog-ng
+textproc/elasticsearch2
+textproc/kibana45
+www/elinks
+www/fcgiwrap
+www/spawn-fcgi
+x11-fonts/dejavu
+x11-toolkits/libXt
+x11/libSM
+x11/libXfixes
+x11/libXi
+x11/libXrender
+x11/libXtst
