--- a/dnsmasq/extrahosts.conf.template
+++ b/dnsmasq/extrahosts.conf.template
@@ -1,1 +1,3 @@
 192.168.1.1 router router.killaz.localdomain
+192.168.1.103 pi-tim pi-tim.killaz.localdomain
+192.168.1.104 pi-sarah pi-sarah.killaz.localdomain
