--- a/pkg_server/make.conf.template
+++ b/pkg_server/make.conf.template
@@ -24,8 +24,8 @@ WITHOUT_FONTCONFIG=yes
 NOPORTDOCS=yes
 WITHOUT=DOCS
 WITHOUT_MODULES = sound ntfs linux
-OPTIONS_UNSET= CUPS NLS DOCS X11 EXAMPLES 
-OPTIONS_SET= CONSOLE
+OPTIONS_UNSET= CUPS NLS DOCS X11 EXAMPLES MYSQL
+OPTIONS_SET= CONSOLE PGSQL POSTGRES POSTGRESQL
 
 # Disable sendmail!
 NO_SENDMAIL=true
@@ -37,3 +37,5 @@ WITHOUT_X11=yes
 WITHOUT_X=yes
 WITH_X=NO
 ENABLE_GUI=NO
+
+DEFAULT_VERSIONS=ruby=2.2
