--- a/sshd/sshd_config.template
+++ b/sshd/sshd_config.template
@@ -18,7 +18,7 @@
 #AddressFamily any
 #ListenAddress 0.0.0.0
 #ListenAddress ::
-#ListenAddress {{ grains['ipv4'][0] }}
+ListenAddress {{ grains['ip'] }}
 
 
 # The default requires explicit activation of protocol 1
