--- a/loghost/kibana.yml.template
+++ b/loghost/kibana.yml.template
@@ -39,7 +39,7 @@ elasticsearch.ssl.verify: false
 server.port: 5601
 
 # The host to bind the server to.
-server.host: "{{ grains['ipv4'][0] }}"
+server.host: "{{ grains['ip'] }}"
 
 # If you are running kibana behind a proxy, and want to mount it at a path,
 # specify that path here. The basePath can't end in a slash.
