--- a/loghost/nginx.conf.template
+++ b/loghost/nginx.conf.template
@@ -7,17 +7,14 @@ events {
 }
 
 http {
-    auth_basic "Restricted Access";
-    auth_basic_user_file /usr/local/etc/nginx/htpasswd.users;
-
     server {
-        listen                80 ;
+        listen                80;
         server_name           log;
-        access_log            /var/log/nginx/kibana.log;
 
         location / {
-            root  /usr/local/share/kibana-3.1.0;
-            index  index.html  index.htm;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header Host $http_host;
+            proxy_pass http://{{ grains['fqdn'] }}:5601;
         }
     }
 }
