--- a/nagios/commands.cfg.template
+++ b/nagios/commands.cfg.template
@@ -143,9 +143,14 @@ define command{
 # 'check_http' command definition
 define command{
         command_name    check_http
-        command_line    $USER1$/check_http -I $HOSTADDRESS$ -a nagiosadmin:gerblah $ARG1$
+        command_line    $USER1$/check_http -I $HOSTADDRESS$
         }
 
+# 'check_http' command definition
+define command{
+        command_name    check_http_auth
+        command_line    $USER1$/check_http -I $HOSTADDRESS$ -a nagiosadmin:gerblah $ARG1$
+        }
 
 # 'check_ssh' command definition
 define command{
