--- a/pkg_server/nginx.conf.template
+++ b/pkg_server/nginx.conf.template
@@ -1,4 +1,6 @@
+user www;
 worker_processes  1;
+error_log /var/log/nginx-error.log info;
 
 events {
     worker_connections  1024;
@@ -8,22 +10,18 @@ http {
     include       mime.types;
     default_type  application/octet-stream;
 
-    sendfile        on;
+    access_log /var/log/nginx-access.log;
 
+    sendfile        on;
     keepalive_timeout  65;
 
     server {
         listen       80;
         server_name  {{ grains['fqdn'] }};
+        root /var/synth/live_packages;
 
         location / {
-            root   /var/synth/live_packages;
             autoindex on;
-        }
-
-        error_page   500 502 503 504  /50x.html;
-        location = /50x.html {
-            root   /usr/local/www/nginx-dist;
         }
     }
 }
