--- a/files/system/periodic.conf
+++ b/files/system/periodic.conf
@@ -15,11 +15,11 @@ local_periodic="/usr/local/etc/periodic"
 #
 daily_output="root"			    		# user or /file
 daily_show_success="YES"				# scripts returning 0
-daily_show_info="YES"					# scripts returning 1
+daily_show_info="NO"					# scripts returning 1
 daily_show_badconfig="YES"				# scripts returning 2
 
 # 100.clean-disks
-daily_clean_disks_enable="YES"				# Delete files daily
+daily_clean_disks_enable="NO"				# Delete files daily
 daily_clean_disks_files="[#,]* .#* a.out *.core *.CKP .emacs_[0-9]*"
 daily_clean_disks_days=3				# If older than this
 daily_clean_disks_verbose="YES"				# Mention files deleted
@@ -53,10 +53,10 @@ daily_clean_hoststat_enable="NO"			# Purge sendmail host
 							# status cache daily
 
 # 200.backup-passwd
-daily_backup_passwd_enable="YES"			# Backup passwd & group
+daily_backup_passwd_enable="NO"			# Backup passwd & group
 
 # 210.backup-aliases
-daily_backup_aliases_enable="YES"			# Backup mail aliases
+daily_backup_aliases_enable="NO"			# Backup mail aliases
 
 # 220.backup-pkgdb
 daily_backup_pkgdb_enable="YES"				# Backup /var/db/pkg
@@ -66,7 +66,7 @@ daily_backup_pkgdb_dir="/var/backups"
 daily_calendar_enable="NO"				# Run calendar -a
 
 # 310.accounting
-daily_accounting_enable="YES"				# Rotate acct files
+daily_accounting_enable="NO"				# Rotate acct files
 daily_accounting_compress="NO"				# Gzip rotated files
 daily_accounting_flags=-q				# Flags to /usr/sbin/sa
 daily_accounting_save=3					# How many files to save
@@ -98,7 +98,7 @@ daily_status_gstripe_enable="NO"			# Check gstripe(8)
 daily_status_gconcat_enable="NO"			# Check gconcat(8)
 
 # 420.status-network
-daily_status_network_enable="YES"			# Check network status
+daily_status_network_enable="NO"			# Check network status
 daily_status_network_usedns="YES"			# DNS lookups are ok
 daily_status_network_netstat_flags="-d"			# netstat(1) flags
 
@@ -106,7 +106,7 @@ daily_status_network_netstat_flags="-d"			# netstat(1) flags
 daily_status_rwho_enable="NO"				# Check system status
 
 # 440.status-mailq
-daily_status_mailq_enable="YES"				# Check mail status
+daily_status_mailq_enable="NO"				# Check mail status
 daily_status_mailq_shorten="NO"				# Shorten output
 daily_status_include_submit_mailq="YES"			# Also submit queue
 
@@ -127,7 +127,7 @@ daily_ntpd_avoid_congestion="YES"			# Avoid congesting
 							# leapfile sources
 
 # 480.status-ntpd
-daily_status_ntpd_enable="YES"				# Check NTP status
+daily_status_ntpd_enable="NO"				# Check NTP status
 
 # 500.queuerun
 daily_queuerun_enable="YES"				# Run mail queue
@@ -155,7 +155,7 @@ daily_local="/etc/daily.local"				# Local scripts
 # wish to log the weekly output and have the files rotated by newsyslog(8)
 #
 weekly_output="root"					# user or /file
-weekly_show_success="YES"				# scripts returning 0
+weekly_show_success="NO"				# scripts returning 0
 weekly_show_info="YES"					# scripts returning 1
 weekly_show_badconfig="YES"				# scripts returning 2
 
@@ -190,7 +190,7 @@ weekly_local="/etc/weekly.local"			# Local scripts
 # wish to log the monthly output and have the files rotated by newsyslog(8)
 #
 monthly_output="root"					# user or /file
-monthly_show_success="YES"				# scripts returning 0
+monthly_show_success="NO"				# scripts returning 0
 monthly_show_info="YES"					# scripts returning 1
 monthly_show_badconfig="YES"				# scripts returning 2
 
