--- a/pkg_server/synth.ini.template
+++ b/pkg_server/synth.ini.template
@@ -15,10 +15,10 @@ Directory_buildbase= /usr/obj/synth-live
 Directory_logs= /var/log/synth
 Directory_ccache= disabled
 Directory_system= /
-Number_of_builders= 4
+Number_of_builders= 2
 Max_jobs_per_builder= 2
 Tmpfs_workdir= true
 Tmpfs_localbase= true
-Display_with_ncurses= true
+Display_with_ncurses= false
 leverage_prebuilt= false
 
