About a billion changes

--- a/files/system/periodic.conf
+++ b/files/system/periodic.conf
@@ -13,7 +13,7 @@ local_periodic="/usr/local/etc/periodic"
 # that output.  $daily_output might be set to /var/log/daily.log if you
 # wish to log the daily output and have the files rotated by newsyslog(8)
 #
-daily_output="root"			    		# user or /file
+daily_output="/var/log/daily.log"	    # user or /file
 daily_show_success="YES"				# scripts returning 0
 daily_show_info="NO"					# scripts returning 1
 daily_show_badconfig="YES"				# scripts returning 2
