--- a/pkg_server/make.conf.template
+++ b/pkg_server/make.conf.template
@@ -21,22 +21,21 @@ WITH_OPTIMIZED_CFLAGS=YES
 ## (headless, no GUI, no X11, no sound, ..)
 WITHOUT_CUPS=yes
 WITHOUT_FONTCONFIG=yes
-NOPORTDOCS=yes
 WITHOUT=DOCS
 WITHOUT_MODULES = sound ntfs linux
-OPTIONS_UNSET= CUPS NLS DOCS X11 EXAMPLES MYSQL
-OPTIONS_SET= CONSOLE PGSQL POSTGRES POSTGRESQL
+OPTIONS_UNSET= CUPS NLS DOCS X11 EXAMPLES MYSQL GSSAPI_BASE
+OPTIONS_SET= CONSOLE PGSQL POSTGRES POSTGRESQL GSSAPI_MIT
 
 # Disable sendmail!
 NO_SENDMAIL=true
 
 # Fresh OpenSSL from Ports
-WITH_OPENSSL_PORT=YES
+DEFAULT_VERSIONS+=ssl=openssl
 
 WITHOUT_X11=yes
 WITHOUT_X=yes
 WITH_X=NO
 ENABLE_GUI=NO
 
-DEFAULT_VERSIONS= ruby=2.1
-RUBY_DEFAULT_VER=2.1
+DEFAULT_VERSIONS=ruby=2.3
+
