--- a/pkg_server/synth.ini.template
+++ b/pkg_server/synth.ini.template
@@ -20,5 +20,4 @@ Max_jobs_per_builder= 2
 Tmpfs_workdir= true
 Tmpfs_localbase= true
 Display_with_ncurses= false
-leverage_prebuilt= false
-
+leverage_prebuilt= true
